добавляет OpenAPI документацию
